fix(mosaic): fix mosaics on safari
SUP-1390

--- a/packages/lumx-core/src/scss/components/thumbnail/_index.scss
+++ b/packages/lumx-core/src/scss/components/thumbnail/_index.scss
@@ -110,8 +110,10 @@
    ========================================================================== */
 
 .#{$lumx-base-prefix}-thumbnail--is-clickable {
+    &:not(.#{$lumx-base-prefix}-thumbnail--fill-height) {
+        display: block;
+    }
     position: relative;
-    display: block;
     cursor: pointer;
 
     &::after {
